# dynablox

./: .clang-format  .gitignore  Dockerfile  LICENSE  README.md  https.rosinstall  ssh.rosinstall
drift_simulation/: CMakeLists.txt  package.xml
drift_simulation/cfg/: drift_severe.yaml
drift_simulation/config/intensities/: light.yaml  moderate.yaml  none.yaml  strong.yaml
drift_simulation/config/rollouts/HB/sequence_1/: simulated_drift_light1.csv  simulated_drift_moderate2.csv  simulated_drift_severe1.csv  simulated_drift_severe2.csv  simulated_drift_severe3.csv  simulated_drift_strong2.csv  simulated_drift_strong3.csv
drift_simulation/config/rollouts/HB/sequence_2/: simulated_drift_light2.csv  simulated_drift_light3.csv  simulated_drift_severe3.csv  simulated_drift_strong2.csv  simulated_drift_strong3.csv
drift_simulation/config/rollouts/HG/sequence_1/: simulated_drift_light1.csv  simulated_drift_light2.csv  simulated_drift_moderate1.csv  simulated_drift_moderate2.csv  simulated_drift_moderate3.csv  simulated_drift_severe3.csv  simulated_drift_strong1.csv
drift_simulation/config/rollouts/HG/sequence_2/: simulated_drift_light1.csv  simulated_drift_light2.csv  simulated_drift_severe3.csv  simulated_drift_strong1.csv  (+1 more)
drift_simulation/include/drift_simulation/: drift_reader.h  normal_distribution.h  odometry_drift_simulator.h  read_simulated_drift.h
drift_simulation/launch/: drifted_pose_csv_data.launch  generate_drift_rollout.launch
drift_simulation/scripts/: create_drift_rollouts.sh
drift_simulation/src/: drift_reader.cpp  drift_reader_node.cpp  normal_distribution.cpp  odometry_drift_simulator.cpp  odometry_drift_simulator_node.cpp  read_simulated_drift.cpp  read_simulated_drift_node.cpp
dynablox/: CMakeLists.txt  package.xml
dynablox/include/dynablox/common/: index_getter.h  neighborhood_search.h  types.h
dynablox/include/dynablox/evaluation/: evaluator.h  ground_truth_handler.h  io_tools.h
dynablox/include/dynablox/processing/: clustering.h  ever_free_integrator.h  preprocessing.h  tracking.h
dynablox/src/evaluation/: evaluator.cpp  ground_truth_handler.cpp  io_tools.cpp
dynablox/src/processing/: clustering.cpp  ever_free_integrator.cpp  preprocessing.cpp  tracking.cpp
dynablox_ros/: CMakeLists.txt  package.xml
dynablox_ros/config/motion_detector/: default.yaml  doals.yaml  lmo.yaml  samuel.yaml
dynablox_ros/config/rviz/: cloud_visualizer.rviz  default.rviz  lmo.rviz  video.rviz  wildcat.rviz
dynablox_ros/include/dynablox_ros/: motion_detector.h
dynablox_ros/include/dynablox_ros/visualization/: cloud_visualizer.h  motion_visualizer.h
dynablox_ros/launch/: cloud_visualizer.launch  lmo.launch  motion_detector.launch  play_doals_data.launch  play_dynablox_data.launch  play_lmo.launch  play_video.launch  run.launch  run_experiment.launch  samuel.launch  visualizer.launch  wildcat.launch
dynablox_ros/scripts/: download_doals_data.sh  download_dynablox_data.sh  record.sh  run_experiments.sh
dynablox_ros/scripts/experiments/: drift.py  drift_analysis.py  runtime.py  table.py
dynablox_ros/src/: cloud_visualizer_node.cpp  motion_detector.cpp  motion_detector_node.cpp  process_data_bag.py
dynablox_ros/src/evaluation/: data_tools.py  evaluate_data.py
dynablox_ros/src/visualization/: cloud_visualizer.cpp  motion_visualizer.cpp
lidar_motion_detection/: CMakeLists.txt  package.xml
lidar_motion_detection/cfg/: ros_params_UrbanDynamicData.yaml
lidar_motion_detection/config/motion_detector/: doals.yaml
lidar_motion_detection/config/rviz/: default.rviz
lidar_motion_detection/include/lidar_motion_detection/: clustering.h  common_types.h  evaluator.h  ever_free_integrator.h  ground_truth_handler.h  motion_detector.h  motion_visualizer.h  preprocessing.h  visualization_utils.h
lidar_motion_detection/include/lidar_motion_detection/common/: index_getter.h  neighborhood_search.h  types.h
lidar_motion_detection/include/lidar_motion_detection/evaluation/: evaluator.h  ground_truth_handler.h  io_tools.h
lidar_motion_detection/include/lidar_motion_detection/processing/: clustering.h  ever_free_integrator.h  preprocessing.h  tracking.h
lidar_motion_detection/launch/: MultiClassDynamicObjectsStairs.launch  UrbanDynamicData.launch  doals.launch  run.launch  visualizer.launch
lidar_motion_detection/src/: clustering.cpp  evaluator.cpp  ever_free_integrator.cpp  ground_truth_handler.cpp  motion_detector.cpp  motion_detector_node.cpp  motion_visualizer.cpp  preprocessing.cpp  visualization_utils.cpp
lidar_motion_detection/src/evaluation/: evaluator.cpp  ground_truth_handler.cpp  io_tools.cpp
lidar_motion_detection/src/processing/: clustering.cpp  ever_free_integrator.cpp  preprocessing.cpp  tracking.cpp
lidar_motion_detection_ros/: CMakeLists.txt  package.xml
lidar_motion_detection_ros/config/motion_detector/: 1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  doals.yaml  doals_26neighbors.yaml  doals_cluster5.yaml  doals_no_buffer.yaml  doals_no_burnin.yaml  doals_tsdf_10.yaml  lmo.yaml  map_lookup.yaml  wildcat.yaml
lidar_motion_detection_ros/config/rviz/: cloud_visualizer.rviz  default.rviz  lmo.rviz  video.rviz  wildcat.rviz
lidar_motion_detection_ros/include/lidar_motion_detection_ros/: motion_detector.h  motion_visualizer.h  visualization_utils.h
lidar_motion_detection_ros/include/lidar_motion_detection_ros/visualization/: cloud_visualizer.h  motion_visualizer.h  visualization_utils.h
lidar_motion_detection_ros/launch/: cloud_visualizer.launch  lmo.launch  play_video.launch  run.launch  samuel.launch  visualizer.launch  wildcat.launch
lidar_motion_detection_ros/scripts/: download_doals.sh  run_experiments.sh
lidar_motion_detection_ros/scripts/experiments/: drift.py  drift_analysis.py  plotting_tools.py  range_analysis.py  record_video.py  runtime.py  table.py
lidar_motion_detection_ros/src/: cloud_visualizer_node.cpp  motion_detector.cpp  motion_detector_node.cpp  motion_visualizer.cpp  visualization_utils.cpp
lidar_motion_detection_ros/src/visualization/: cloud_visualizer.cpp  motion_visualizer.cpp  visualization_utils.cpp
(+144 files in other folders)
