<?xml version="1.0"?>
<package format="2">
  <name>drift_simulation</name>
  <version>0.0.0</version>
  <description>Reproducible Odometry Drift Simulation</description>

  <author email="schmluk@ethz.ch">Lukas Schmid</author>
  <author email="asulser@ethz.ch">Aurelio Sulser</author>
  <author email="olov.andersson@ethz.ch">Olov Andersson</author>

  <maintainer email="schmluk@ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="asulser@ethz.ch">Aurelio Sulser</maintainer>
  <maintainer email="olov.andersson@ethz.ch">Olov Andersson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
</package>
