<?xml version="1.0"?>
<package format="2">
  <name>dynablox</name>
  <version>0.0.0</version>
  <description>Detecting arbitrary moving objects in compelx environments</description>

  <author email="schmluk@ethz.ch">Lukas Schmid</author>
  <author email="asulser@ethz.ch">Aurelio Sulser</author>
  <author email="olov.andersson@ethz.ch">Olov Andersson</author>

  <maintainer email="schmluk@ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="asulser@ethz.ch">Aurelio Sulser</maintainer>
  <maintainer email="olov.andersson@ethz.ch">Olov Andersson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies -->
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>voxblox</depend>
</package>
