<?xml version="1.0"?>
<package format="2">
  <name>dynablox_ros</name>
  <version>0.0.0</version>
  <description>Detecting diverse dynamic objects in compelx environments</description>

  <author email="schmluk@ethz.ch">Lukas Schmid</author>
  <author email="asulser@ethz.ch">Aurelio Sulser</author>
  <author email="olov.andersson@ethz.ch">Olov Andersson</author>

  <maintainer email="schmluk@ethz.ch">Lukas Schmid</maintainer>
  <maintainer email="asulser@ethz.ch">Aurelio Sulser</maintainer>
  <maintainer email="olov.andersson@ethz.ch">Olov Andersson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>voxblox_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_rviz_plugin</depend>
  <depend>dynablox</depend>

  <!-- Packages required for demo -->
  <depend>drift_simulation</depend>
  <depend>ouster_ros</depend>
  <depend>lidar_undistortion</depend>

</package>
